17328
The following (minimized) code compiled with 2.9, but fails to compile with 2.10:

{code}
  trait TFn1[I] { type In = I }
  trait >>[F1 <: TFn1[_], F2 <: TFn1[_]] extends TFn1[F1#In]
{code}

{code}
<console>:8: error: illegal inheritance;
 self-type >>[F1,F2] does not conform to TFn1[_$1]'s selftype TFn1[_$1]
         trait >>[F1 <: TFn1[_], F2 <: TFn1[_]] extends TFn1[F1#In]
                                                        ^
{code}
